tests/NormalTests/paczka2/big_fuzzy/73471323.err
Error in line 1: KIrDf A978 27,2
Error in line 5: A723 A86 75,1
Error in line 30: KIrDf S303 96,06
Error in line 27: A723 A723 40,0
Error in line 19: KIrDf A978 32,3
Error in line 39: cxh26 A86 518,1
Error in line 40: foC A86 76,7
Error in line 43: foC A723 62,0
Error in line 42: cxh26 A978 76,0
Error in line 41: KIrDf S303 196,1
Error in line 52: 5nNgY940Q5 S303 90,8
Error in line 61: cxh26 A978 25,5
Error in line 48: ixs5I A86 80,9
Error in line 77: wRAo S303 20,73
Error in line 82: cxh26 A9ù8 24,ù
Error in line 75: cxh26 A978 20,9
Error in line 106: cxh26 A86 85,2
Error in line 107: cxh26 A978 46,6
Error in line 109: KIrDf S303 23,0
Error in line 112: KIrDf A86 96,3
Error in line 116: A723 A86 29,2
Error in line 121: KIrDf A978 80,7
Error in line 124: A723 A723 73,6
Error in line 113: wRAo S303 90,5
Error in line 126: ixs5I A86 0,8
Error in line 157: 5nNgY940Q5 A978 73,0
Error in line 163: foC A86 90,6
Error in line 165: A723 S303 4,8
Error in line 168: A723 A86 29,0
Error in line 166: foC A723 12,5
Error in line 182: A723 A86 51,6
Error in line 183: A723 S303 79,2
Error in line 150: KIrDf S303 318,1
Error in line 184: A723 A86 19,5
Error in line 181: cxh26 A978 98,1
Error in line 174: wRAo A723 50,5
Error in line 221: cxh26 A86 -1,7
Error in line 214: KIrDf A86 5,3
Error in line 219: ixs5I S303 24,8
Error in line 218: 5nNgY940Q5 S303 82,5
Error in line 233: KIrDf A723 51,2
Error in line 228: 5nNgY940Q5 A86 28,1
Error in line 220: cxh26 A86 29,1
Error in line 234: KIrDf A86 57,0
Error in line 249: ixs5I A723 -2,6
